...
            "state": "translated",
            "value": "Audio Exp"
          }
        }
      }
    },
    "Audio Experience": {
      "comment": "The title of a screen that displays a list of nuggets.",
      "isCommentAutoGenerated": true,
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
...
            "state": "translated",
            "value": "लोकप्रिय अनुभव देखने के लिए दूसरा शहर चुनें या वर्तमान स्थान का उपयोग करें।"
          }
        }
      }
    },
    "Close": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Cerrar"
          }
...
            "value": "संग्रहालय"
          }
        }
      }
    },
    "Mute ambient audio": {},
    "My Tours": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Mis recorridos"
          }
...
            "state": "translated",
            "value": "टूर पड़ाव"
          }
        }
      }
    },
    "Tour ready offline": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Recorrido listo sin conexión"
          }
...
